--- a/frontend/noteably/src/FolderApp.css
+++ b/frontend/noteably/src/FolderApp.css
@@ -1,17 +1,23 @@
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
 .folder-app {
     display: flex;
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.5);
-    border: 2px solid lightgray;
+    border: 1px solid lightgray;
     border-radius: 30px;
     padding: 20px;
-    background-image: url('http://localhost:3000/ASSETS/polkadot.png') no-repeat center;
+    background: url('C:\Users\Janine P. Giducos\OneDrive\Desktop\GIT_sana_final_noteably\Noteably\frontend\noteably\public\ASSETS\polkadot.png') no-repeat center center;
     background-size: cover;
     box-sizing: border-box;
     overflow: hidden;
     z-index: 0;
     position: relative;
     min-height: 100vh;
+    margin-top: 50px;
+    
 }
 
 .top-section {
@@ -205,17 +211,24 @@
 }
 
 .confirm-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 1000;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+    width: 500px; /* Adjust width as needed */
+    z-index: 2001; /* Ensure it appears above other elements */
 }
+
 
 .confirm-content {
     background: white;
+    border: 2px solid lightgray; /* Border style */
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     animation: slideIn 0.3s ease-out;
     display: flex;
     align-items: center;
