--- a/frontend/noteably/src/LandingPage.css
+++ b/frontend/noteably/src/LandingPage.css
@@ -11,8 +11,8 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    color: #333;
+    min-height: 40vh;
+    color: #ffffff;
 }
 
 /* Header */
@@ -21,12 +21,12 @@ body, html {
     justify-content: space-between; /* Ensures logo and buttons are spaced apart */
     align-items: center;
     width: 100%; /* Make sure the header spans the full container */
-    padding: 0px 20px 10px; /* Adjust padding for more consistent spacing */
+    padding: 5px 15px 5px; /* Adjust padding for more consistent spacing */
     background: transparent; /* Remove background */
 }
 
 .logo {
-    width: 120px;
+    width: 110px;
     height: auto;
     margin-right: auto; /* Push the logo away from the buttons */
 }
@@ -75,18 +75,17 @@ body, html {
     align-items: center;
 
     background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent background */
-    border: 2px solid lightgray; /* Border style */
+    border: 1px solid lightgray; /* Border style */
     border-radius: 30px; /* Rounded corners */
-    padding: 20px; /* Inner padding */
+    padding: 15px; /* Inner padding */
     background: url('C:\Users\Janine P. Giducos\OneDrive\Desktop\GIT_sana_final_noteably\Noteably\frontend\noteably\public\ASSETS\polkadot.png') no-repeat center center; /* Polkadot background */
     background-size: cover; /* Ensure background image fills the area */
    
     box-sizing: border-box; /* Ensure padding and border are included in size */
     overflow: hidden; /* Prevent overflow */
-
     z-index: 0; /* Ensure it's behind other elements */
     position: relative;
-    min-height: 100vh;
+    min-height: 90vh;
 }
 
 .content-box {
@@ -95,7 +94,7 @@ body, html {
     border-radius: 12px;
     max-width: 700px;
     width: 100%;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
     text-align: center;
     z-index: 2; /* Position above the background */
     border: 2px solid lightgray; /* Border style */
