--- a/frontend/noteably/src/Login.css
+++ b/frontend/noteably/src/Login.css
@@ -8,7 +8,7 @@ Login css
 }
 
 body, html {
-    height: 100%;
+    height: 90%;
     width: 100%;
     font-family: Arial, sans-serif;
     display: flex;
@@ -17,12 +17,13 @@ body, html {
 }
 
 .header {
-    width: 100%;
+    width: 80%;
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(247, 248, 252, 0.8);
+    margin-top: 10px;
 }
 
 .logo {
@@ -67,20 +68,17 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent background */
-    border: 2px solid lightgray; /* Border style */
+    border: 1px solid lightgray; /* Border style */
     border-radius: 30px; /* Rounded corners */
     padding: 20px; /* Inner padding */
     background: url('C:\Users\Janine P. Giducos\OneDrive\Desktop\GIT_sana_final_noteably\Noteably\frontend\noteably\public\ASSETS\polkadot.png') no-repeat center center; /* Polkadot background */
-    background-size: cover; /* Ensure background image fills the area */
-   
+    background-size: cover; /*  Ensure background image fills the area */
     box-sizing: border-box; /* Ensure padding and border are included in size */
     overflow: hidden; /* Prevent overflow */
-
     z-index: 0; /* Ensure it's behind other elements */
     position: relative;
-    min-height: 100vh;
+    min-height: 87vh;
 }
 
 .login-card {
@@ -93,12 +91,12 @@ body, html {
     z-index: 2; /* Position above the background */
     border: 2px solid lightgray; /* Border style */
     border-radius: 30px; /* Rounded corners */
-
     display: flex;
     flex-direction: column;
     gap: 15px;
     justify-content: center;
     align-items: center;
+    color: #073B4C;
 }
 
 .login-card p {
@@ -115,8 +113,9 @@ body, html {
 
 /* MIKU OO EE OO */
 .password-image {
-    width: 400px;
+    width: 350px;
     height: auto;
+    margin-top: -100px;
 }
 
 
